{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 80,
  "lineage": "bfd9095a-8a10-11ae-09f4-d48148071cab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d1d69533a194191",
            "arn": "arn:aws:ec2:ap-south-1:123202050855:instance/i-09917adfee0ed847b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09917adfee0ed847b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8-vpc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2a0c8af21a6b59c",
            "private_dns": "ip-172-31-7-168.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.7.168",
            "public_dns": "ec2-65-2-5-213.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.5.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b1a2c11f13a1d59",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "common-ports",
              "flannel-overlay-backend",
              "kubeadm-control-plane security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057ab93270c95b761",
            "tags": {
              "Name": "k8 Master Node",
              "Role": "Control plane node"
            },
            "tags_all": {
              "Name": "k8 Master Node",
              "Role": "Control plane node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1137ab4ce2b1088",
              "sg-0d5833d1b69abea9f",
              "sg-0eb6faed6683d153e"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8-key",
            "aws_security_group.k8-sg-common",
            "aws_security_group.k8-sg-control-plane",
            "aws_security_group.k8-udp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8_worker_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d1d69533a194191",
            "arn": "arn:aws:ec2:ap-south-1:123202050855:instance/i-0ae6ee870dca99aba",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae6ee870dca99aba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8-vpc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03721c6e877653be0",
            "private_dns": "ip-172-31-14-187.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.187",
            "public_dns": "ec2-13-233-192-99.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.192.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bdba4f7c753d00c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "common-ports",
              "flannel-overlay-backend",
              "kubeadm-control-plane security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057ab93270c95b761",
            "tags": {
              "Name": "k8 Worker 0",
              "Role": "Worker node"
            },
            "tags_all": {
              "Name": "k8 Worker 0",
              "Role": "Worker node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1137ab4ce2b1088",
              "sg-0d5833d1b69abea9f",
              "sg-0eb6faed6683d153e"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8-key",
            "aws_security_group.k8-sg-common",
            "aws_security_group.k8-sg-control-plane",
            "aws_security_group.k8-udp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d1d69533a194191",
            "arn": "arn:aws:ec2:ap-south-1:123202050855:instance/i-0ffefe2c77ad172eb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffefe2c77ad172eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8-vpc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07b1a99d05361c6ac",
            "private_dns": "ip-172-31-15-16.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.16",
            "public_dns": "ec2-3-110-208-49.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.208.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02d5a10540eb1dc8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "common-ports",
              "flannel-overlay-backend",
              "kubeadm-control-plane security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057ab93270c95b761",
            "tags": {
              "Name": "k8 Worker 1",
              "Role": "Worker node"
            },
            "tags_all": {
              "Name": "k8 Worker 1",
              "Role": "Worker node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1137ab4ce2b1088",
              "sg-0d5833d1b69abea9f",
              "sg-0eb6faed6683d153e"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8-key",
            "aws_security_group.k8-sg-common",
            "aws_security_group.k8-sg-control-plane",
            "aws_security_group.k8-udp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:123202050855:internet-gateway/igw-0df6b67c2ebb791ee",
            "id": "igw-0df6b67c2ebb791ee",
            "owner_id": "123202050855",
            "vpc_id": "vpc-0db229e6bb931a5ad"
          },
          "dependencies": [
            "aws_vpc.k8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:123202050855:route-table/rtb-03f934eabdd71943b",
            "id": "rtb-03f934eabdd71943b",
            "owner_id": "123202050855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df6b67c2ebb791ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my k8 public RT"
            },
            "tags_all": {
              "Name": "my k8 public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db229e6bb931a5ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8-igw",
            "aws_vpc.k8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bba3126dba986d7b",
            "route_table_id": "rtb-03f934eabdd71943b",
            "subnet_id": "subnet-0f91f1bbea789d498"
          },
          "dependencies": [
            "aws_internet_gateway.k8-igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.k8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8-sg-common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:123202050855:security-group/sg-0d5833d1b69abea9f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5833d1b69abea9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "common-ports",
            "name_prefix": "",
            "owner_id": "123202050855",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "common ports k8s"
            },
            "tags_all": {
              "Name": "common ports k8s"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a52bf8df87e81ca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8-sg-control-plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:123202050855:security-group/sg-0eb6faed6683d153e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0eb6faed6683d153e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API Server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube Contoller Manager",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube Scheduler",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "etcd server client API",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              }
            ],
            "name": "kubeadm-control-plane security group",
            "name_prefix": "",
            "owner_id": "123202050855",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Control Plane SG"
            },
            "tags_all": {
              "Name": "Control Plane SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a52bf8df87e81ca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8-sg-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:123202050855:security-group/sg-0028917b494cc3def",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0028917b494cc3def",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kube-proxy",
                "from_port": 10256,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10256
              }
            ],
            "name": "worker-node security group",
            "name_prefix": "",
            "owner_id": "123202050855",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Worker Nodes SG"
            },
            "tags_all": {
              "Name": "Worker Nodes SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a52bf8df87e81ca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8-udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:123202050855:security-group/sg-0a1137ab4ce2b1088",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a1137ab4ce2b1088",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "flannel overlay backend",
                "from_port": 8285,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8285
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "flannel vxlan backend",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              }
            ],
            "name": "flannel-overlay-backend",
            "name_prefix": "",
            "owner_id": "123202050855",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Flannel Overlay backend"
            },
            "tags_all": {
              "Name": "Flannel Overlay backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a52bf8df87e81ca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:123202050855:subnet/subnet-0f91f1bbea789d498",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f91f1bbea789d498",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "123202050855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my k8 public subnet"
            },
            "tags_all": {
              "Name": "my k8 public subnet"
            },
            "vpc_id": "vpc-0db229e6bb931a5ad"
          },
          "dependencies": [
            "aws_internet_gateway.k8-igw",
            "aws_vpc.k8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:123202050855:vpc/vpc-0db229e6bb931a5ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cde05eac75461710",
            "default_route_table_id": "rtb-0af0ad334539f59c7",
            "default_security_group_id": "sg-0fec35bad24b75d6e",
            "dhcp_options_id": "dopt-0fa6b4854d40245c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db229e6bb931a5ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af0ad334539f59c7",
            "owner_id": "123202050855",
            "tags": {
              "Name": "k8-vpc"
            },
            "tags_all": {
              "Name": "k8-vpc"
            }
          }
        }
      ]
    }
  ]
}